# ime-live-converter

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/examples/: bench_convert.rs  check_dict.rs  kg.rs
crates/common/src/: candidate.rs  composition.rs  converter.rs  dictionary.rs  learning.rs  lib.rs  llm.rs  rerank.rs  serialization.rs  typo.rs  viterbi.rs
crates/common/src/viterbi/: incremental.rs  lattice.rs  nbest.rs  scoring.rs  tests.rs
crates/conversion-service/: Cargo.toml
crates/conversion-service/src/: main.rs
crates/dict-builder/: Cargo.toml
crates/dict-builder/src/: main.rs
crates/hook-dll/: Cargo.toml
crates/hook-dll/src/: command_mode.rs  conversion.rs  hook.rs  lib.rs  popup.rs  settings_ui.rs  uia.rs
crates/hook-test/src/: main.rs
dictionaries/: commands.csv  extra.csv  sample.dic
scripts/: clean-learning-db.py  install-autostart.ps1  rebuild-and-run.ps1  run-hidden-debug.vbs  run-hidden.vbs  uninstall-autostart.ps1
tests/: dict_test.rs
