[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
ureq = { version = "2.10", default-features = false, features = ["json"] }
