[package]
name = "conversion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
common = { path = "../common" }
anyhow = "1.0"
