[package]
name = "hook-dll"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Console",
] }

common = { path = "../common" }
zeroize = "1.7"
tracing = "0.1"

[lib]
crate-type = ["cdylib"]